030-software/fluxcd/apps/weechat/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weechat
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: weechat
  template:
    metadata:
      labels:
        app: weechat
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: weechat
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: weechat
      containers:
        - name: weechat
          image: weechat/weechat:4.10.1-alpine-slim
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: false
            capabilities:
              drop:
                - ALL
          args:
            - weechat-headless
            - --stdout
            - --dir
            - /weechat
            - -r
            - "/set relay.network.password weechat"
            - -r
            - "/relay add weechat 9001"
            - -r
            - "/set xfer.file.auto_accept_files on"
          ports:
            - name: relay
              containerPort: 9001
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: relay
          livenessProbe:
            tcpSocket:
              port: relay
          readinessProbe:
            tcpSocket:
              port: relay
          volumeMounts:
            - name: data
              mountPath: /weechat
            - name: nfs-downloads
              mountPath: /weechat/xfer
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 128Mi
        - name: glowing-bear
          image: j33r/glowing-bear:latest@sha256:4d538504358593e7c49b57c6cd283f50d5822f235b6af8f3e1ec9ef6b9201713
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
          volumeMounts:
            - name: temp
              mountPath: /tmp
      volumes:
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: config
        - name: nfs-downloads
          nfs:
            server: 10.102.22.211
            path: /weechat
