030-software/fluxcd/apps/weechat/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weechat
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9001
      targetPort: relay
      protocol: TCP
      name: relay
  selector:
    app: weechat
